# augmentoolkit-mlx

./: .gitignore  augmentoolkit-MLX-full-project-structure-gemini.md  augmentoolkit-full-project-structure.md  claude-mlx.md  mlx-briefing.md
chatgpt/: README.md  gitignore  gitmodules  pyproject.toml  super_config.yaml
chatgpt/.github/workflows/: ci.yml
chatgpt/config/: at_config.yaml  lora.yaml
chatgpt/scripts/: bootstrap.sh  finetune.py  generate_dataset.py  serve_api.py  split_dataset.py  test_inference.py  verify_env.py
claude-MCP/: CONTRIBUTING.md  README.md  SEARCH_RESULTS_SUMMARY.md  pyproject.toml  summary.md
claude-MCP/examples/: compare_models.py  complete_workflow.py  quick_inference.py  simple_chat.py
claude-MCP/mlx_pipeline/: __init__.py  benchmark.py  cli.py  data.py  inference.py  models.py  quantization.py  setup.py  training.py
mlx-augmentoolkit-starter/domain-expert-llm/: README.md  pyproject.toml
mlx-augmentoolkit-starter/domain-expert-llm/config/: at_config.yaml  lora.yaml
mlx-augmentoolkit-starter/domain-expert-llm/data/: train.jsonl
mlx-augmentoolkit-starter/domain-expert-llm/scripts/: augmentoolkit_stub.py  finetune.py  generate_dataset.py  serve_api.py  verify_env.py
perplexity/: Augmentoolkit Mac Studio research.md  Augmentoolkit-MLX Integration_ Strategic Modular A.md  MLX-data-prep.md  Perplexity-turnkey-repo.md
perplexity/approach-1/: README.md  augmentoolkit-mlx-converter.py  integration-plan.md  pipeline-config.yaml  pipeline-orchestrator.py  script.py  script_1.py  script_2.py  script_3.py  script_4.py  setup.sh
perplexity/approach-2/: augmentoolkit-implementation-guide.md  chart_script.py  chart_script_1.py  llm_knowledge_approaches_comparison.csv  script.py
