[project]
name = "domain-expert-llm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "mlx",
  "mlx-lm",
  "transformers",
  "pandas",
  "rich",
  "typer",
  "huggingface_hub",
  "accelerate"
]

[tool.uv]
virtual = true

[tool.uv.scripts]
generate = "python scripts/generate_dataset.py"
train = "python scripts/finetune.py"
serve = "uvicorn scripts.serve_api:app --host 0.0.0.0 --port 8080"
verify = "python scripts/verify_env.py"
split = "python scripts/split_dataset.py"
test_inference = "python scripts/test_inference.py"
