[project]
name = "mlx-complete-pipeline"
version = "0.1.0"
description = "Complete MLX pipeline for Apple Silicon - from data prep to deployment"
authors = [
    {name = "Brady Clarke", email = "brady@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "mlx>=0.19.0",
    "mlx-lm>=0.18.0",
    "transformers>=4.45.0",
    "datasets>=2.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.35.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "huggingface-hub>=0.24.0",
    "safetensors>=0.4.0",
    "tokenizers>=0.19.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
server = [
    "prometheus-client>=0.20.0",
    "aiofiles>=24.0.0",
]
augmentoolkit = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mlx-setup = "mlx_pipeline.cli:setup_environment"
mlx-prepare-data = "mlx_pipeline.cli:prepare_data"
mlx-download-model = "mlx_pipeline.cli:download_model"
mlx-finetune = "mlx_pipeline.cli:finetune"
mlx-quantize = "mlx_pipeline.cli:quantize"
mlx-serve = "mlx_pipeline.cli:serve"
mlx-benchmark = "mlx_pipeline.cli:benchmark"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "ANN", "S", "C4", "EM", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "PLR0913", "PLR0912", "PLR0915"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
